# space-traffic-api

./: .env.example  .gitignore  .pytest_last.txt  Dockerfile  README.md  benchmark_results.json  full_phase51.txt  full_suite.txt  parity_all.txt  parity_fast.txt  profiling_results.txt  pyproject.toml  pytest_full.out  pytest_out.txt  pytest_phase52.txt  roadmap.md  run.py  test_output.txt
.github/workflows/: ci.yml  release.yml
artifacts/: benchmark_results.json
docs/: api-consumption-guide.md  index.html  milestone-3-session-1-profiling.md  openapi.yaml  orbital-scaling-note.md  simulation-time-model.md
scripts/: benchmark_deterministic.py  benchmark_orbital_scaling.py  capture_golden_snapshot.py  container_sanity_check.py  release_smoke_gate.py  sanity_check.py  smoke_check.py  stream_departures.py
src/space_traffic_api/: app.py  auth.py  config.py  faults.py  generator.py  routes.py  runtime.py  scenarios.py  seed_data.py  (+1 more)
src/space_traffic_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api.py  test_api_contract.py  test_config_validation.py  test_control.py  test_dashboard_live_controls.py  test_economy_routing.py  test_engine_optimization.py  test_engine_profiling.py  test_fleet_state.py  test_golden_snapshot.py  test_lifecycle.py  test_orbital_state.py  test_persistence_safety.py  test_pirate_activity.py  test_scenario_lifecycle_overrides.py  test_seed_data.py  test_shadow_comparison_harness.py  test_shadow_parity.py  test_shadow_stability.py  test_simulation_clock.py  test_station_capabilities.py  test_storage.py  test_travel_time.py
(+36 files in other folders)
